experimenting with spray configs

--- a/core/controller/src/main/resources/application.conf
+++ b/core/controller/src/main/resources/application.conf
@@ -28,6 +28,20 @@ spray.can.server {
   # Explaining the set value:
   # This must be greater than the request timeout.
   idle-timeout = 120s
+  # The maximum number of requests that are accepted (and dispatched to
+  # the application) on one single connection before the first request
+  # has to be completed.
+  # Incoming requests that would cause the pipelining limit to be exceeded
+  # are not read from the connections socket so as to build up "back-pressure"
+  # to the client via TCP flow control.
+  # A setting of 1 disables HTTP pipelining, since only one request per
+  # connection can be "open" (i.e. being processed by the application) at any
+  # time. Set to higher values to enable HTTP pipelining.
+  # Set to 'disabled' for completely disabling pipelining limits
+  # (not recommended on public-facing servers due to risk of DoS attacks).
+  # This value must be > 0 and <= 128.
+  pipelining-limit = 128
+
 
   parsing {
     # This indirectly puts a bound on the name of entities
@@ -37,4 +51,17 @@ spray.can.server {
     # This is 50MB to allow action attachments
     max-content-length = 50m
   }
+}
+spray.can.host-connector {
+  # The maximum number of parallel connections that an `HttpHostConnector`
+  # is allowed to establish to a host. Must be greater than zero.
+  # (default 4)
+  max-connections = 48
+
+  # If this setting is enabled, the `HttpHostConnector` pipelines requests
+  # across connections, otherwise only one single request can be "open"
+  # on a particular HTTP connection.
+  # (default off)
+  pipelining = on
+
 }
