--- a/core/invoker/src/main/resources/application.conf
+++ b/core/invoker/src/main/resources/application.conf
@@ -14,6 +14,6 @@ spray.can {
     # across connections, otherwise only one single request can be "open"
     # on a particular HTTP connection.
     # (default off)
-    pipelining = off
+    pipelining = on
   }
 }
